Added instructions on how to run javafx applications.